# vsaLLM

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  MANIFEST_SHA256.txt  PACKAGE_INFO.json  README.md  THIRD_PARTY_NOTICES.md  fileSizesCheck.sh  package-lock.json  package.json  pyproject.toml  requirements-dgx.txt  requirements.txt
config/: base.json  calibration_cpu.json  cpu_quick.json  dense_active_cpu.json  dense_total_cpu.json  dgx_spark.json  dgx_spark_calibration.json  dgx_spark_dense_active.json  dgx_spark_dense_total.json  full_cpu.json  full_gpu.json  official_matrix.json  offline_fixture.json  smoke.json
containers/dgx-spark/: Dockerfile
docs/: architecture.html  cpu-memory.html  data.html  dgx-runbook.html  evaluation.html  index.html  operations.html  partials-loader.js  protocol.html  reproducibility.html  sources.html  styles.css  training.html
docs/partials/: footer.html  header.html
docs/specs/: DS000-vision.md  DS001-coding-style.md  DS002-llm-model-strategy.md  DS003-experimental-methodology.md  DS004-data-assets-preparation.md  DS005-training-checkpoints.md  DS006-evaluation-blind-review.md  (+5 more)
scripts/: blind-eval.mjs  blind-lib.mjs  experiment.mjs  generate_specs_matrix.mjs  handoff.mjs  lib.mjs  offline-smoke.mjs  report.mjs  setup.mjs  test-python.mjs  verify-package.mjs  verify_docs_links.mjs  verify_static_site.js
tests/: blind.test.mjs  handoff.test.mjs  project.test.mjs  report.test.mjs  test_assets.py  test_benchmark.py  test_common.py  test_common_provenance.py  test_data.py  test_dgx.py  test_model.py  test_router.py  test_train.py
(+17 files in other folders)
